# library

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  README.rst  SECURITY.md  TODO  Windows.md  db.py  duplicate_music.py  extract.py  extract_tags.py  ff.py  find_duplicates.sql  lb.py  listen.py  pyproject.toml  pytest.ini  readme.py  setup.py  subtitle.py  utils.py  watch.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  README.md  SECURITY.md  Windows.md  pull_request_template.md  readme.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/examples/: art.avif
.github/workflows/: green.yaml  publish.yaml  push.yaml  release-notes.yml  release_tag.yaml  test.yaml
example_dbs/: README.md  cities.db  music.japan.ln.db  music.korea.ln.db  podcasts.tl.db  tabs.db
examples/: README.md  podcasts.tl.db  tabs.db
scripts/: __init__.py  bigdirs.py  christen.py  dedupe.py  deduplicate_music.py  duplicate_music.py  find_duplicates.sql  invalid_filenames.py  invalid_paths.py  invalid_paths_db.py  large_folders.py  merge_dbs.py  merge_online_local.py  move_list.py  optimize_db.py  reddit_dbs.py  redownload.py  relmv.py  restore_listen_count.sql  scatter.py  streaming_tab_loader.py
scripts/mining/: data.py  nfb_ca.py  nouns.py  pushshift.py  reddit_self.py
sql/: transfer.sql
tests/: conftest.py  test_av.py  test_db_utils.py  test_dl.py  test_fs.py  test_fs_actions.py  test_fs_extract.py  test_fs_update.py  test_gdl_backend.py  test_get_playlist_metadata_blogspot_album  test_get_playlist_metadata_imgur_album  test_get_playlist_metadata_imgur_single  test_get_playlist_metadata_tumblr_album  test_get_rss_exists  test_get_rss_redirect  test_get_video_metadata  test_get_video_metadata_channel  test_get_video_metadata_playlist  test_lb.py  test_media_player.py  test_modules.py  test_no_sql.py  test_nums.py  test_praw.py  test_rss.py  test_sql_utils.py  test_tabs.py  test_tube.py  test_tube_backend.py  test_tube_metadata.py  test_utils.py  test_web.py  test_xk.py  test_xklb.py  test_yt  utils.py
tests/cassettes/: test_get_playlist_metadata_blogspot_album  test_get_playlist_metadata_imgur_album  test_get_playlist_metadata_imgur_single  test_get_playlist_metadata_tumblr_album  test_get_rss_exists  test_get_rss_redirect  test_get_video_metadata  test_get_video_metadata_channel  test_get_video_metadata_playlist  test_yt
tests/createdb/: test_fs_add.py  test_gallery_add.py  test_gallery_backend.py  test_hn_add.py  test_links_add.py  test_reddit_add.py  test_row_add.py  test_rss_add.py  test_site_add.py  test_substack.py  test_tables_add.py  test_tabs_add.py  test_tildes.py  test_tube_add.py  test_tube_backend.py  test_web_add.py
tests/data/: data_bug_stubrecord.sql  test.dta  test.feather  test.hdf  test.html  test.nc  test.opus  test.orc  test.pkl  test.vtt  test.xlsx  test.xml  test2.xml
tests/editdb/: test_dedupe_db.py  test_dedupe_media.py
tests/files/: test_christen.py  test_sample_compare.py  test_sample_hash.py
tests/folders/: test_merge_folders.py  test_merge_mv.py  test_merge_mv_mod_depth.py  test_mergerfs_cp.py  test_rel_mv.py  test_scatter.py  test_similar_folders.py
tests/fsdb/: test_disk_usage.py  test_files_info.py  test_search_db.py
tests/mediadb/: test_download.py  test_download_status.py  test_live.py  test_playlists.py  test_search.py  test_stats.py
tests/mediafiles/: test_images_to_pdf.py  test_media_check.py  test_process_ffmpeg.py  test_process_image.py  test_process_media.py  test_process_text.py  test_torrents_dump.py
tests/misc/: test_search_help.py
tests/multidb/: test_merge_dbs.py
tests/playback/: test_links_open.py  test_media_player.py  test_play_actions.py  test_play_history.py  test_playback_control.py  test_tabs_open.py
tests/scripts/: test_merge_folders.py  test_process_image.py
tests/tablefiles/: test_columns.py  test_eda.py  test_incremental_diff.py  test_markdown_tables.py  test_mcda.py  test_plot.py
tests/text/: test_cluster_sort.py  test_combinations.py  test_dates.py  test_expand_links.py  test_extract_links.py  test_extract_text.py  test_json_keys_rename.py  test_markdown_links.py  test_nouns.py  test_regex_sort.py  test_timestamps.py
tests/utils/: __init__.py  test_argparse_utils.py  test_db_utils.py  test_file_utils.py  test_filter_logic.py  test_iterables.py  test_mpv_utils.py  test_nums.py  test_objects.py  test_path_utils.py  test_path_utils_dirtree.py  test_pd_utils.py  test_printing.py  test_processes.py  test_shell_utils.py  test_sql_utils.py  test_strings.py  test_web.py
utils/: restore_listen_count.sql
xk/: __init__.py  actions.py  db.py  lb.py  utils.py
xklb/: __init__.py  __main__.py  actions.py  av.py  books.py  consts.py  db.py  db_media.py  db_playlists.py  dl_config.py  dl_extract.py  extract.py  fs_actions.py  fs_extract.py  galy_extract.py  gdl_backend.py  gdl_extract.py  gui.py  history.py  hn_extract.py  lb.py  listen.py  media.py  media_printer.py  paths.py  play_actions.py  playback.py  player.py  playlists.py  post_actions.py  praw_extract.py  readme.py  reddit_extract.py  rss_extract.py  search.py  site_extract.py  stats.py  subtitle.py  tabs_actions.py  tabs_extract.py  (+9 more)
xklb/assets/: calibre.css
xklb/createdb/: av.py  computer_add.py  computer_info.py  computers_add.py  fs_add.py  fs_add_metadata.py  gallery_add.py  gallery_backend.py  gdl_add.py  hn_add.py  links_add.py  nicotine_import.py  places_import.py  reddit_add.py  row_add.py  rss_add.py  site_add.py  substack.py  subtitle.py  tables_add.py  tabs_add.py  tildes.py  torrents_add.py  tube_add.py  tube_backend.py  web_add.py
xklb/data/: dl_config.py  ffmpeg_errors.py  http_errors.py  imagemagick_errors.py  unar_errors.py  wordbank.py  yt_dlp_errors.py
xklb/editdb/: dedupe_db.py  dedupe_media.py  merge_online_local.py  mpv_watchlater.py  pushshift.py  reddit_selftext.py
xklb/files/: christen.py  llm_map.py  sample_compare.py  sample_hash.py  similar_files.py
xklb/folders/: big_dirs.py  merge_folders.py  merge_mv.py  mergerfs_cp.py  mount_stats.py  move_list.py  rel_mv.py  scatter.py  (+1 more)
(+524 files in other folders)
